// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests different variations of <SchoolDayPicker> Renders SchoolDayPicker 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "#EFEFF4",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingRight": 15,
      }
    }
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
    >
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "fontSize": 13,
              "letterSpacing": -0.078,
            },
            Object {
              "color": "#6D6D72",
            },
            Object {},
          ]
        }
      >
        School Days
      </Text>
    </RCTSafeAreaView>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 0.5,
          },
          Object {
            "backgroundColor": "#C8C7CC",
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {},
        false,
      ]
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 1
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 2
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 3
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 4
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 5
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 6
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
    >
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "minHeight": 44,
                "paddingLeft": 15,
                "paddingRight": 20,
              },
              Object {
                "backgroundColor": "#FFF",
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 10,
              }
            }
          >
            <Text
              allowFontScaling={true}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "fontSize": 16,
                    "letterSpacing": -0.32,
                  },
                  Object {
                    "color": "#000",
                  },
                  Array [
                    Object {
                      "color": "#1f85cc",
                    },
                  ],
                ]
              }
            >
              Day 7
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderBottomWidth": 2,
                    "borderColor": "#007AFF",
                    "borderLeftWidth": 2,
                    "height": 6,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 13,
                  },
                  Object {
                    "borderColor": "#007AFF",
                  },
                ]
              }
            />
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 0.5,
          },
          Object {
            "backgroundColor": "#C8C7CC",
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Tests different variations of <SchoolDayPicker> Renders SchoolDayPicker with a restaint and corrects value 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "backgroundColor": "#EFEFF4",
        "paddingBottom": 15,
        "paddingTop": 15,
      },
    ]
  }
>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingLeft": 15,
        "paddingRight": 15,
      }
    }
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
    >
      <Text
        allowFontScaling={true}
        style={
          Array [
            Object {
              "fontSize": 13,
              "letterSpacing": -0.078,
            },
            Object {
              "color": "#6D6D72",
            },
            Object {},
          ]
        }
      >
        School Days
      </Text>
    </RCTSafeAreaView>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 0.5,
          },
          Object {
            "backgroundColor": "#C8C7CC",
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {},
        false,
      ]
    }
  >
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 1
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "gray",
                    },
                    Object {},
                  ]
                }
              >
                Day 2
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 3
              </Text>
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 4
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View>
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "gray",
                    },
                    Object {},
                  ]
                }
              >
                Day 5
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View>
      <View
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={null}
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "backgroundColor": "#FFF",
              },
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "minHeight": 44,
                  "paddingLeft": 15,
                  "paddingRight": 20,
                },
                Object {
                  "backgroundColor": "#FFF",
                },
                Object {},
              ]
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                allowFontScaling={true}
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "fontSize": 16,
                      "letterSpacing": -0.32,
                    },
                    Object {
                      "color": "#000",
                    },
                    Array [
                      Object {
                        "color": "#1f85cc",
                      },
                    ],
                  ]
                }
              >
                Day 6
              </Text>
            </View>
            <View
              style={
                Object {
                  "justifyContent": "center",
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "borderBottomWidth": 2,
                      "borderColor": "#007AFF",
                      "borderLeftWidth": 2,
                      "height": 6,
                      "marginLeft": 7,
                      "transform": Array [
                        Object {
                          "rotate": "-45deg",
                        },
                      ],
                      "width": 13,
                    },
                    Object {
                      "borderColor": "#007AFF",
                    },
                  ]
                }
              />
            </View>
          </View>
        </RCTSafeAreaView>
      </View>
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {},
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "height": 0.5,
              },
              Object {
                "backgroundColor": "#C8C7CC",
                "marginLeft": 15,
                "marginRight": 0,
              },
            ]
          }
        />
      </RCTSafeAreaView>
    </View>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={null}
    >
      <RCTSafeAreaView
        emulateUnlessSupported={true}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "#FFF",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "minHeight": 44,
                "paddingLeft": 15,
                "paddingRight": 20,
              },
              Object {
                "backgroundColor": "#FFF",
              },
              Object {},
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingVertical": 10,
              }
            }
          >
            <Text
              allowFontScaling={true}
              numberOfLines={1}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "fontSize": 16,
                    "letterSpacing": -0.32,
                  },
                  Object {
                    "color": "#000",
                  },
                  Array [
                    Object {
                      "color": "#1f85cc",
                    },
                  ],
                ]
              }
            >
              Day 7
            </Text>
          </View>
          <View
            style={
              Object {
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderBottomWidth": 2,
                    "borderColor": "#007AFF",
                    "borderLeftWidth": 2,
                    "height": 6,
                    "marginLeft": 7,
                    "transform": Array [
                      Object {
                        "rotate": "-45deg",
                      },
                    ],
                    "width": 13,
                  },
                  Object {
                    "borderColor": "#007AFF",
                  },
                ]
              }
            />
          </View>
        </View>
      </RCTSafeAreaView>
    </View>
  </View>
  <View
    style={
      Array [
        Object {},
        Object {
          "backgroundColor": "#FFF",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": 0.5,
          },
          Object {
            "backgroundColor": "#C8C7CC",
            "marginLeft": 0,
            "marginRight": 0,
          },
        ]
      }
    />
  </View>
</View>
`;
